--- a/src/app/pages/introduction/introduction.component.html
+++ b/src/app/pages/introduction/introduction.component.html
@@ -4,24 +4,13 @@
       <div class="split-slide">
         <div class="text-column">
           <h1>Introduction</h1>
-          <p>
-            In all modern manufacturing processes, it is essential to observe and validate the condition of components
-            at
-            the output stage. This validation not only ensures the integrity of the physical elements, but also enables
-            the extraction of valuable contextual information about the entire production chain—ranging from raw
-            materials
-            to the influence of external factors such as personnel and machinery.
+          <p> In <strong>modern manufacturing,</strong> verifying component conditions at the output stage is critical. This ensures
+            product integrity and reveals insights across the production chain—from raw materials to external influences
+            like personnel and machinery. <strong>Industry 4.0</strong> raises the bar, demanding more advanced quality control methods.
           </p>
-          <p>
-            Within the framework of Industry 4.0, this necessity translates into the demand for enhanced quality control
-            techniques capable of meeting increasingly stringent standards. In this context, and driven by rapid
-            advancements in processing hardware, computer vision has emerged as a powerful and viable solution.
-          </p>
-          <p>
-            Computer vision refers to a set of techniques for acquiring, processing, analyzing, and interpreting images
-            of
-            the real world in order to generate discrete information that can be processed by digital systems.
-          </p>
+          <p> Amid rapid hardware advances, <strong>computer vision</strong> has become a powerful solution. It involves acquiring,
+            processing, and interpreting images to generate data that supports automation and smarter decision-making in
+            industrial environments. </p>
         </div>
         <div class="image-column">
           <img src="assets/images/intro_industry40.png" alt="Model Diagram" />
@@ -35,25 +24,36 @@
       <div class="split-slide">
         <div class="text-column">
           <h1>Motivation</h1>
-          <p>
-            As manufacturing systems evolve toward full automation, the need for faster, more reliable quality
-            inspection
-            methods becomes increasingly critical. Manual inspections are often subjective and inconsistent, while
-            traditional rule-based vision systems struggle with subtle or previously unseen defects.
-          </p>
-          <p>
-            Automating defect detection using computer vision addresses these limitations by improving inspection speed,
-            accuracy, and repeatability. This is particularly vital in high-stakes industries such as aerospace,
-            automotive, and pharmaceuticals, where undetected defects can result in costly recalls and safety hazards.
-          </p>
-          <p>
-            Modern computer vision techniques enable real-time, pixel-level analysis, reducing waste and ensuring
-            compliance with rigorous quality standards. These capabilities align closely with the goals of Industry 4.0,
-            making automated visual inspection a strategic priority for contemporary manufacturing.
-          </p>
+          <p> As manufacturing moves toward full automation, fast and <strong>reliable quality inspection</strong> becomes crucial.
+            Manual checks are often inconsistent, and traditional rule-based vision systems  <strong>fail</strong> to catch subtle or
+            novel defects. </p>
+          <p> Computer vision overcomes these challenges by enabling accurate, real-time defect detection. This is
+            especially important in high-risk industries like aerospace and pharmaceuticals. By <strong>improving</strong> precision and
+            reducing waste, it supports Industry 4.0 goals and makes automated visual inspection a key priority. </p>
         </div>
         <div class="image-column">
           <img src="assets/images/intro_blade_defect.png" alt="Model Diagram" />
+        </div>
+      </div>
+    </div>
+  </ng-template>
+
+
+  <ng-template>
+    <div class="slide-content">
+      <div class="split-slide">
+        <div class="text-column">
+          <h1>Aerospace Industry</h1>
+          <p>In the aerospace industry, advanced visual analysis technologies have improved <strong>safety</strong>, maintenance, and
+            manufacturing efficiency. By enabling early detection of structural issues, they help prevent failures and
+            extend component life. These tools also <strong>enhance quality</strong> control on production lines and support navigation
+            and obstacle detection in flight operations, contributing to more reliable and <strong>efficient</strong> aerospace systems.
+          </p>
+        </div>
+        <div class="image-column">
+          <div class="aerospace-industry-img-wrapper">
+            <img src="assets/images/introduction/aerospace_industry.jpg" alt="Model Diagram" />
+          </div>
         </div>
       </div>
       <div class="next-btn-div">
