--- a/src/app/pages/yolo-cls/yolo-cls.component.scss
+++ b/src/app/pages/yolo-cls/yolo-cls.component.scss
@@ -73,8 +73,18 @@
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
 
     img {
-        width:100%;
+        width: 100%;
         height: auto;
         object-fit: cover;
+    }
+}
+
+.mosaic-gif-wrapper {
+    display: flex;
+    justify-content: center;
+
+    img {
+min-height: 250px;
+min-width: 250px;
     }
 }
